--- a/listas.html
+++ b/listas.html
@@ -197,6 +197,40 @@ if(result.ok){
     
 })
 
+//obtener datos de codigo postal
+$('#cp').change(function (){
+let x = document.getElementById("cp").value;
+let largo = x.length;
+if(largo==5){
+
+    fetch(url,{
+        method:'POST',
+        body: JSON.stringify({
+            "NombreCatalogo":"Sepomex",
+            "Filtro":"",
+            "IdAplication":2
+        }),     
+
+        headers:{
+            "Content-type":"application/json"
+        }})
+    .then(function(result){
+if(result.ok){
+    return result.json();
+}
+  }).then(function(datos){
+      console.log(datos);
+      /*
+      document.getElementById("edo").value=datos.estado;
+      document.getElementById("mcip").value=datos.municipio;
+      document.getElementById("col").value=datos.colonia;
+      */  
+});
+}
+
+});
+
+
 //valida edad
 $('#selects-cascada').submit(function(e){
    
